<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clResultItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.74" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineV95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/example_event"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/mainDarkerBlue"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV66"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResultDateStartEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text="14.12.2017 - 15.01.2018"
        android:textColor="@color/mainBlue"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV66"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toBottomOf="@+id/tvResultTitle" />

    <TextView
        android:id="@+id/tvResultDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/detailed_info_field"
        android:textColor="@color/mainGrey"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV66"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="@+id/guidelineV5"
        app:layout_constraintTop_toBottomOf="@+id/tvResultDateStartEnd" />

    <Button
        android:id="@+id/btnResultDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/detailed_info"
        android:textAllCaps="false"
        android:textColor="@color/mainDarkerBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineV66"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>